--- a/static/index.html
+++ b/static/index.html
@@ -52,7 +52,7 @@
         formData.append("resumes", file);
       }
 
-      const response = await fetch("http://127.0.0.1:8000/upload", {
+      const response = await fetch("http://resume-app-lb-1973762325.ap-south-1.elb.amazonaws.com/upload", {
         method: "POST",
         body: formData
       });
